# timetable_creator

./: .gitignore  AUTHORS  Makefile  Makefile.am  README  configure.ac  main.c  structs.h  timetable.c
po/: Makevars  POTFILES.in  timetable_creator.pot
src/: main.c  structs.c  structs.h  timetable.c  timetable.h
testinput/: BI-A1L.txt  BI-LIN.txt  BI-PA2.txt  BI-PA2l.txt  BI-PJV.txt  BI-SAP.txt  BI-TED.txt  BI-ZUM.txt  predmety.txt  settings.ini
